# MovieRatingSystem

./: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 59016a81050f_add_basic_models.py
app/controller/: controller.py
app/db/: session.py
app/exceptions/: __init__.py  repository_exceptions.py  service_exceptions.py
app/models/: models.py
app/repositories/: __init__.py  director_repository.py  genre_repository.py  movie_repository.py  movierating_repository.py  repository_schema.py
app/schemas/: schemas.py
app/services/: services.py
scripts/: seed_check.py  seeddb.sql
