[project]
name = "my-project"
version = "0.1.0"
description = ""
authors = [
    { name = "Mohammad", email = "ebrahimirad.mohammad31@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "alembic>=1.17.2,<2.0.0",
    "pydantic>=2.12.5,<3.0.0",
    "fastapi[standard]>=0.127.0,<0.128.0",
    "psycopg2-binary>=2.9.11,<3.0.0",
    "sqlalchemy>=2.0.45,<3.0.0",
    "python-dotenv>=1.2.1,<2.0.0"
]

[tool.poetry]
packages = [{ include = "my_project", from = "src" }]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
